# cpp-backports

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.cpp
include/cppbp/: string_view.hpp  type_traits.hpp
test/: CMakeLists.txt  string_view_test.cpp  tests.cpp
